# GF_SPDC

./: .gitignore  GreenFunctionStitcher - Copy.py  GreenFunctionStitcher.py  GreenFunctionsExtractorParallelized.py  README.md  SPDCNumerical_CPU.py  loadGreens.py  pyproject.toml  type0_beta_5perMgO_LN.py  typeII_beta_5perMgO_LN.py
.serena/: project.yml
.serena/memories/: stitching_algorithm_state.md
scripts/: plot_greens.py  run_gamma_sweep.py  run_stitcher.py  run_two_photon_absorption.py  workflow_notebook.py
src/gf_spdc/: __init__.py  extractor.py  loader.py  mgo_lithium_niobate_type0_beta.py  mgo_lithium_niobate_type2_beta.py  solver.py  stitcher.py  two_photon_absorption.py  type0_beta.py  type2_beta.py
tests/: test_extractor.py  test_loader.py  test_phase_matching.py  test_solver.py  test_stitcher.py  test_two_photon_absorption.py
